--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,11 @@ go:
   - 1.4
   - 1.5
   - tip
+before_install:
+  - go get github.com/axw/gocov/gocov
+  - go get github.com/mattn/goveralls
+  - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
+script:
+    - $HOME/gopath/bin/goveralls -race=true -service=travis-ci ./...
 notifications:
   email: false
